--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -38,6 +38,6 @@ background-size: cover;
     transition-duration: 300ms;
 }
 
-.navegacion a:hover{
+.navegacion a:hover, .active{
     background-color: var(--primary);
 }
